--- a/account_withholding_tax/static/description/index.html
+++ b/account_withholding_tax/static/description/index.html
@@ -1,13 +1,13 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan">Create Withholding Taxes from Invoice</h2>
-        <h3 class="oe_slogan">Cut the open balance with some withholding taxes</h3>
+        <h3 class="oe_slogan">Cut the open balance with withholding tax</h3>
 <!--         <div class="oe_span6"> -->
 <!--             <div class="oe_demo oe_picture oe_screenshot"> -->
 <!-- 				<img src="account_sc_00.png" alt="Online Demo"> -->
 <!--             </div> -->
 <!--         </div> -->
-        <div class="oe_span6">
+        <div>
             <p class='oe_mt32'>
                 Only with one click you can add a withholding taxes entries along to AP or AR journal entries.
             </p>
